config/gloo/gateway.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: fruits-api
  namespace: my-gloo
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          multi:
            destinations:
              - weight: 100
                destination:
                  upstream:
                    name: fruits-app-fruits-api-8080
                    namespace: my-gloo
